--- a/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Curator.razor
@@ -46,7 +46,7 @@
 			<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(170px, 1fr)); gap: 20px; width: 100%;">
 				@foreach (var destacado in juegosDestacados)
 				{
-					bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, destacado);
+					bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, destacado);
 					bool usuarioTieneDeseado = false;
 
 					string fondoColor = string.Empty;
@@ -193,7 +193,7 @@
 					<Virtualize Context="juego" Items="juegosCuratorMostrar" ItemSize="107" OverscanCount="6">
 						<ItemContent>
 							@{
-								bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, juego);
+								bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego);
 								bool usuarioTieneDeseado = false;
 
 								string fondoColor = string.Empty;
@@ -258,8 +258,7 @@
 
 	private Usuario usuario = new Usuario();
 	private bool usuarioPatreon = false;
-	private List<string> juegosUsuarioSteam = new List<string>();
-	private List<string> juegosUsuarioGog = new List<string>();
+	private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
 	private BaseDatos.Curators.Curator curator = new BaseDatos.Curators.Curator();
 	private List<Juegos.Juego> juegosCurator = new List<Juegos.Juego>();
@@ -279,16 +278,7 @@
 		if (usuario != null)
 		{
 			usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
-
-			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-			{
-				juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-			}
-
-			if (string.IsNullOrEmpty(usuario.GogGames) == false)
-			{
-				juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-			}
+			juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
 		}
 
 		curator = BaseDatos.Curators.Buscar.Uno(curatorId);
