--- a/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
@@ -109,7 +109,7 @@
 
 								if (juego != null)
 								{
-									bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, juego, recompensaJuego.DRM);
+									bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego, recompensaJuego.DRM);
 									bool usuarioTieneDeseado = false;
 
 									string fondoColor = "background-color: var(--fondoBotonPequeño)";
@@ -303,9 +303,7 @@
 	public string usuarioId { get; set; }
 
 	private Usuario usuario = new Usuario();
-
-	private List<string> juegosUsuarioSteam = new List<string>();
-	private List<string> juegosUsuarioGog = new List<string>();
+	private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
 	private List<RecompensaJuego> juegos = new List<RecompensaJuego>();
 
@@ -329,16 +327,7 @@
 		if (usuario != null)
 		{
 			entradas = BaseDatos.Recompensas.Historial.Leer(usuario.Id);
-
-			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-			{
-				juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-			}
-
-			if (string.IsNullOrEmpty(usuario.GogGames) == false)
-			{
-				juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-			}
+			juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
 		}
 	}
 	
