--- a/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/Cabecera.razor
@@ -329,7 +329,7 @@
                         <Virtualize Context="juego" Items="resultadosMostrar" ItemSize="107">
                             <ItemContent>
                                 @{
-                                    bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, juego);
+                                    bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego);
                                     bool usuarioTieneDeseado = false;
 
                                     string fondoColor = string.Empty;
@@ -475,8 +475,7 @@ else
     public bool usuarioLogeado { get; set; }
 
     private bool usuarioPatreon = false;
-    private List<string> juegosUsuarioSteam = new List<string>();
-    private List<string> juegosUsuarioGog = new List<string>();
+    private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
     [Parameter]
     public string ubicacionEnlace { get; set; }
@@ -490,16 +489,7 @@ else
         if (usuarioLogeado == true)
         {
             usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
-
-            if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-            {
-                juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-            }
-
-            if (string.IsNullOrEmpty(usuario.GogGames) == false)
-            {
-                juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-            }
+            juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
 
             if (BaseDatos.Usuarios.Buscar.RolDios(usuario.Id) == true)
             {
