--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -224,7 +224,7 @@
 
 									if (mostrar == true)
 									{
-										bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, juego.Juego, juego.DRM);
+										bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego.Juego, juego.DRM);
 										bool usuarioTieneDeseado = false;
 
 										string fondoColor = string.Empty;
@@ -535,6 +535,7 @@
 
 	private Usuario usuario = new Usuario();
 	private bool usuarioPatreon = false;
+	private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
 	[Parameter]
 	public int bundleId { get; set; }
@@ -543,9 +544,6 @@
 	public Tipo tipo { get; set; } = Tipo.Bundle;
 
 	public Bundles2.Bundle bundle = new Bundles2.Bundle();
-
-	private List<string> juegosUsuarioSteam = new List<string>();
-	private List<string> juegosUsuarioGog = new List<string>();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -574,15 +572,7 @@
 
 		if (usuario != null)
 		{
-			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-			{
-				juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-			}
-
-			if (string.IsNullOrEmpty(usuario.GogGames) == false)
-			{
-				juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-			}
+			juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
 		}
 	}
 
