--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -29,7 +29,7 @@
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); justify-items: center; gap: 40px;">
         @foreach (var juego in juegosActuales)
         {
-            bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(juegosUsuarioSteam, juegosUsuarioGog, juego.Juego, juego.DRM);
+            bool usuarioTieneJuego = Herramientas.UsuarioJuegos.ComprobarSiTiene(juegosUsuario, juego.Juego, juego.DRM);
             bool usuarioTieneDeseado = false;
 
             string fondoColor = string.Empty;
@@ -270,12 +270,10 @@
 
     private Usuario usuario = new Usuario();
     private bool usuarioPatreon = false;
+    private Herramientas.UsuarioListadosJuegos juegosUsuario = new Herramientas.UsuarioListadosJuegos();
 
     private List<Juegos.JuegoGratis> juegosActuales = new List<Juegos.JuegoGratis>();
     private List<Gratis2.GratisComponente> gratisPasados = new List<Gratis2.GratisComponente>();
-
-    private List<string> juegosUsuarioSteam = new List<string>();
-    private List<string> juegosUsuarioGog = new List<string>();
 
     private List<string> años = new List<string>();
     private string añoSeleccionado = string.Empty;
@@ -286,17 +284,8 @@
 
         if (usuario != null)
         {
-            if (string.IsNullOrEmpty(usuario.SteamGames) == false)
-            {
-                juegosUsuarioSteam = Herramientas.Listados.Generar(usuario.SteamGames);
-            }
-
-            if (string.IsNullOrEmpty(usuario.GogGames) == false)
-            {
-                juegosUsuarioGog = Herramientas.Listados.Generar(usuario.GogGames);
-            }
-
             usuarioPatreon = Herramientas.Patreon.VerificarActivo(usuario.PatreonLastCheck);
+            juegosUsuario = Herramientas.UsuarioJuegos.Cargar(usuario);
         }
 
         //--------------------------------------------------------------------
