--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Goggalaxy.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Goggalaxy.razor
@@ -4,6 +4,7 @@
 @using Microsoft.Data.Sqlite
 @using System.Text
 @using System.Net.Http.Headers
+@using Microsoft.VisualBasic
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
@@ -64,7 +65,7 @@
         @if (trabajando == false)
         {
             <label class="boton" style="cursor: pointer; font-size: 16px; width: fit-content; padding: 10px 15px;">
-                <InputFile OnChange="CargarFichero" accept=".sqlite" hidden />
+                <InputFile OnChange="CargarFichero" accept=".db" hidden />
                 @string.Format(Herramientas.Idiomas.BuscarTexto(idioma, "String6", "AccountAmazon"), "GameUserInteractionsInfo.sqlite")
             </label>
 
@@ -103,28 +104,28 @@
     {
         trabajando = true;
 
-        if (e.File.Name.ToLower().Contains("gameuserinteractionsinfo") == true)
+        if (e.File.Name.ToLower().Contains("galaxy-2.0") == true)
         {
             importados = 0;
 
             IBrowserFile fichero = e.File;
-            int maximoTamaño = 1024000;
+            int maximoTamaño = 1024000 * 48;
             byte[] buffer = new byte[fichero.Size];
 
             Herramientas.FicheroLecturaPerezosa stream = new Herramientas.FicheroLecturaPerezosa(fichero, maximoTamaño);
             StreamContent contenido = new StreamContent(stream);
 
-            string ubicacion = Path.GetFullPath("./wwwroot/otros/amazon.sqlite");
+            string ubicacion = Path.GetFullPath("./wwwroot/otros/goggalaxy.db");
             await File.WriteAllBytesAsync(ubicacion, await contenido.ReadAsByteArrayAsync());
 
-            List<string> listadoIds = new List<string>();
+            List<GogGalaxyJuego> listadoJuegos = new List<GogGalaxyJuego>();
 
             using (SqliteConnection conexion = new SqliteConnection("Data Source=" + ubicacion))
             {
                 conexion.Open();
 
                 SqliteCommand comando = conexion.CreateCommand();
-                comando.CommandText = "SELECT * FROM dbset";
+                comando.CommandText = "SELECT releaseKey, value FROM GamePieces WHERE gamePieceTypeId = 16";
 
                 using (SqliteDataReader lector = comando.ExecuteReader())
                 {
@@ -134,14 +135,30 @@
                         {
                             if (string.IsNullOrEmpty(lector.GetString(0)) == false)
                             {
-                                listadoIds.Add(lector.GetString(0));
+                                if (lector.GetString(0).Contains("epic_") == true)
+                                {
+                                    string id = lector.GetString(0);
+                                    id = id.Replace("epic_", null);
+
+                                    string nombre = lector.GetString(1);
+                                    nombre = nombre.Replace("{" + Strings.ChrW(34) + "title" + Strings.ChrW(34) + ":" + Strings.ChrW(34), null);
+                                    nombre = nombre.Replace("}", null);
+                                    nombre = nombre.Replace("\"", null);
+
+                                    GogGalaxyJuego nuevo = new GogGalaxyJuego();
+                                    nuevo.Id = id;
+                                    nuevo.Nombre = nombre;
+                                    nuevo.DRM = Juegos.JuegoDRM.Epic;
+
+                                    listadoJuegos.Add(nuevo);
+                                }
                             }
                         }
                     }
                 }
             }
 
-            if (listadoIds.Count > 0)
+            if (listadoJuegos.Count > 0)
             {
                 SqlConnection conexion = new SqlConnection();
 
@@ -157,27 +174,30 @@
                     }
                 }
 
-                string textoIds = string.Empty;
+                string textoEpicIds = string.Empty;
 
-                foreach (string id in listadoIds)
+                foreach (GogGalaxyJuego juego in listadoJuegos)
                 {
-                    BaseDatos.Plataformas.Buscar.Amazon(id, conexion);
-
-                    if (string.IsNullOrEmpty(textoIds) == true)
+                    if (juego.DRM == Juegos.JuegoDRM.Epic)
                     {
-                        textoIds = id;
-                    }
-                    else
-                    {
-                        textoIds = textoIds + "," + id;
-                    }
+                        BaseDatos.Plataformas.Buscar.Epic(juego.Id, juego.Nombre, conexion);
 
-                    importados += 1;
+                        if (string.IsNullOrEmpty(textoEpicIds) == true)
+                        {
+                            textoEpicIds = juego.Id;
+                        }
+                        else
+                        {
+                            textoEpicIds = textoEpicIds + "," + juego.Id;
+                        }
+
+                        importados += 1;
+                    }
                 }
 
                 if (usuario != null)
                 {
-                    usuario.AmazonGames = textoIds;
+                    usuario.EpicGames = textoEpicIds;
 
                     try
                     {
@@ -185,12 +205,19 @@
                     }
                     catch
                     {
-                        BaseDatos.Errores.Insertar.Mensaje("Cuenta Amazon Juegos", usuario.Id);
+                        BaseDatos.Errores.Insertar.Mensaje("Cuenta Gog Galaxy Juegos", usuario.Id);
                     }
                 }
             }
         }
 
         trabajando = false;
+    }
+
+    private class GogGalaxyJuego
+    {
+        public string Id { get; set; }
+        public string Nombre { get; set; }
+        public Juegos.JuegoDRM DRM { get; set; }
     }
 }
